--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongoose": "^6.8.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1"
   }
 }
